<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio_profesor"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_editarPerfil_profesor"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_editarPerfil" />
        <item
            android:id="@+id/nav_sesiones_profesor"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_sesiones" />
        <item
            android:id="@+id/nav_material_profesor"
            android:icon="@drawable/ic_build"
            android:title="@string/menu_material" />
    </group>

    <item android:title="Acciónes">
        <menu>
            <item
                android:id="@+id/nav_cerrarSesion_Profesor"
                android:icon="@drawable/ic_close_black_24dp"
                android:title="@string/menu_cerrarSesion"/>
            <item
                android:id="@+id/nav_ayudaProfesor"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/menu_ayuda"/>
            <item
                android:id="@+id/nav_privacidadProfesor"
                android:icon="@drawable/ic_privacidad"
                android:title="Política de Privacidad"/>
        </menu>
    </item>

</menu>
