<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_editarPerfil"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_editarPerfil" />
        <item
            android:id="@+id/nav_sesiones"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_sesiones" />
        <item
            android:id="@+id/nav_ruta"
            android:icon="@drawable/ic_equalizer_black_24dp"
            android:title="@string/menu_ruta" />
    </group>

    <item android:title="Más">
        <menu>
            <item
                android:id="@+id/nav_ayuda"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/menu_ayuda"/>
            <item
                android:id="@+id/nav_privacidad"
                android:icon="@drawable/ic_privacidad"
                android:title="Política de Privacidad"/>
        </menu>
    </item>

</menu>
