<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_profesor"
    app:startDestination="@+id/nav_inicio_profesor">

    <fragment
        android:id="@+id/nav_inicio_profesor"
        android:name="com.proathome.ui.inicioProfesor.InicioProfesorFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio_profesor" />
    <fragment
        android:id="@+id/nav_editarPerfil_profesor"
        android:name="com.proathome.ui.editarPerfilProfesor.EditarPerfilProfesorFragment"
        android:label="@string/menu_editarPerfil"
        tools:layout="@layout/fragment_editar_perfil_profesor" />

    <fragment
        android:id="@+id/nav_sesiones_profesor"
        android:name="com.proathome.ui.sesionesProfesor.SesionesProfesorFragment"
        android:label="@string/menu_sesiones"
        tools:layout="@layout/fragment_sesiones_profesor" />

    <fragment
        android:id="@+id/nav_material_profesor"
        android:name="com.proathome.ui.materialProfesor.MaterialProfesorFragment"
        android:label="@string/menu_ruta"
        tools:layout="@layout/fragment_material_profesor" />

    <fragment
        android:id="@+id/nav_cerrarSesion_Profesor"
        android:name="com.proathome.ui.cerrarSesionProfesor.CerrarSesionProfesorFragment"
        android:label="@string/menu_cerrarSesion"
        tools:layout="@layout/fragment_cerrar_sesion_profesor" />

</navigation>