<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollMapGestionar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_min"
    tools:context=".fragments.DetallesGestionarFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/common_padding_default">

            <fragment
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mapsDetallesG"
                class="com.proathome.controladores.WorkaroundMapFragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toTopOf="parent"
                tools:context=".MapsFragment" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProfesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profesor_asignado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mapsDetallesG"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietProfesor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/horario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilProfesor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietHorario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lugar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilHorario"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tiempo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilLugar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietTiempo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNivel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nivel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTiempo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNivel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tipo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilNivel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilObservaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observaciones"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTipo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietObservaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnActualizarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actualizar"
                android:layout_marginTop="@dimen/common_padding_min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilObservaciones">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEliminarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:layout_marginStart="@dimen/common_padding_default"
                android:text="@string/eliminar"
                android:backgroundTint="@android:color/holo_red_dark"
                app:layout_constraintStart_toEndOf="@+id/btnActualizarSesion"
                app:layout_constraintTop_toBottomOf="@id/tilObservaciones">

            </com.google.android.material.button.MaterialButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</ScrollView>